[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fitora-backend"
version = "1.0.14"
description = "Fitora Training Backend API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.1.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]
